Fixed syntax error on line 27

--- a/AspNetCoreTodo/Views/Todo/Index.cshtml
+++ b/AspNetCoreTodo/Views/Todo/Index.cshtml
@@ -24,7 +24,7 @@
                     <input type="checkbox" class="done-checkbox">
                 </td>
                 <td>@item.Title</td>
-                <td>@item.DueAt.Humanize</td>
+                <td>@item.DueAt.Humanize()</td>
             </tr>
         }
     </table>
