--- a/AspNetCoreTodo/Views/Todo/Index.cshtml
+++ b/AspNetCoreTodo/Views/Todo/Index.cshtml
@@ -1,13 +1,11 @@
 @model TodoViewModel
-@using Humanizer
+@using Humanizer;
 
 @{
     ViewData["Title"] = "Manage your todo list";
 }
-
 <div class="panel panel-default todo-panel">
     <div class="panel-heading">@ViewData["Title"]</div>
-
     <table class="table table-hover">
         <thead>
             <tr>
@@ -16,22 +14,28 @@
                 <td>Due</td>
             </tr>
         </thead>
-
-        @foreach (var item in Model.Items)
+        @if (Model.Items != null)
         {
-            <tr>
-                <td>
-                    <form asp-action="MarkDone" method="POST">
-                        <input type="checkbox" class="done-checkbox">
-                        <input type="hidden" name="id" value="@item.Id">
-                    </form>
-                </td>
-                <td>@item.Title</td>
-                <td>@item.DueAt.Humanize()</td>
-            </tr>
+            @foreach (var item in Model.Items)
+            {
+                <tr>
+                    <td>
+                        <form asp-action="MarkDone" method="POST">
+                            <input type="checkbox" class="done-checkbox">
+                            <input type="hidden" name="id" value="@item.Id">
+                        </form>
+                    </td>
+                    <td>@item.Title</td>
+                    <td>@item.DueAt.Humanize()</td>
+                </tr>
+            }
         }
-    </table>
+        else
+        {
+            <p>No items available.</p>
+        }
 
+    </table>
     <div class="panel-footer add-item-form">
         @await Html.PartialAsync("AddItemPartial", new TodoItem())
     </div>
